# house-notes-be

./: .dockerignore  .env_template  .gitignore  Dockerfile  Jenkinsfile  Pipfile  README.md  deployment.yml  docker-compose.dev.yml  docker-compose.yml  ingress.yml  manage.py  pyproject.toml  requirements.txt  service.yml
app/: app.py  config.py
app/helper/: user_helper.py
app/models/: __init__.py  note_model.py  user_model.py
app/routes/: api.py
app/schemas/: note_schema.py  user_schema.py
docker/app/: Dockerfile
migrations/versions/: 48d5816a8b21_.py  71c5dd597fe8_.py  c0dffda69879_.py
src/: app.py  config.py
src/models/: __init__.py  note_model.py  user_model.py
src/routes/: api.py
src/schemas/: note_schema.py  user_schema.py
test/: conftest.py  helper_test.py  test_scenario.py
